# chat-history-manager-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.cargo/: config.toml
backend/: Cargo.toml  build.rs
backend/protobuf/: history.proto  services.proto
backend/resources/test/badoo-android_2023-12/: ChatComDatabase.sql
backend/resources/test/telegram_2020-01/: result.json
backend/resources/test/telegram_2021-05/: result.json
backend/resources/test/telegram_2023-01/: result.json
backend/resources/test/telegram_2023-10_audio-video/: result.json
backend/resources/test/telegram_2024-02_create-channel_saved-from/: result.json
backend/resources/test/whatsapp-android_2023-10/: msgstore.sql  wa.sql
backend/resources/test/whatsapp-text_2023-10/: WhatsApp Chat with +123 45 6789.txt
backend/scalapb/: scalapb.proto
backend/src/: dao.rs  lib.rs  loader.rs  main.rs  merge.rs  utils.rs
backend/src/dao/: in_memory_dao.rs  in_memory_dao_tests.rs  sqlite_dao.rs  sqlite_dao_tests.rs
backend/src/dao/sqlite_dao/: mapping.rs  utils.rs
backend/src/loader/: badoo_android.rs  badoo_android_tests.rs  mra.rs  telegram.rs  tinder_android.rs  whatsapp_android.rs  whatsapp_android_tests.rs  whatsapp_text.rs
backend/src/loader/mra/: db_tests.rs
backend/src/loader/telegram/: parser_full.rs  parser_single.rs
backend/src/merge/: analyzer_tests.rs  merger.rs  merger_tests.rs
backend/src/server/: history_dao_service.rs  history_loader_service.rs  merge_service.rs  myself_chooser.rs
backend/src/utils/: entity_utils.rs  test_utils.rs
backend/src/utils/entity_utils/: entity_equality.rs
core/: Cargo.toml  build.rs
core/protobuf/: entities.proto
core/src/: lib.rs  utils.rs
core/src/utils/: entity_utils.rs  test_utils.rs
proto/: history.proto
protobuf/: dao.proto  history.proto
resources/main/db_migrations/: V1__initial_schema.sql
resources/main/migrations/1__initial_schema/: up.sql
resources/main/migrations/202311061__searchable_string/: up.sql
resources/main/migrations/202403121__remove_group_call/: up.sql
resources/test/telegram_2020-01/: result.json
resources/test/telegram_2021-06_supergroup/: result.json
resources/test/telegram_2021-07/: result.json
resources/test/telegram_2023-01/: result.json
resources/test/telegram_2023-08/: result.json
resources/test/telegram_2023-11/: result.json
resources/test/telegram_2024-01/: result.json
resources/test/telegram_2024-01_inline-bot-buttons/: result.json
resources/test/telegram_2024-01_reply-to-channel-post/: result.json
resources/test/tinder-android_2023-11/: tinder-3.sql
resources/test/whatsapp-android_2023-10/: msgstore.sql
resources/test/whatsapp-text_2023-10/: WhatsApp Chat with +123 45 6789.txt
scalapb/: _scalapb.proto  scalapb.proto
src/: dao.rs  entities.rs  json.rs  lib.rs  loader.rs  main.rs  protobuf.rs  server.rs  test_utils.rs  utils.rs
src/dao/: grpc_remote_dao.rs  in_memory_dao.rs  in_memory_dao_tests.rs  sqlite_dao.rs  sqlite_dao_tests.rs
src/dao/sqlite_dao/: mapping.rs  utils.rs
src/json/: telegram.rs  telegram_tests.rs
src/json/telegram/: parser_full.rs  parser_single.rs
src/loader/: badoo_android.rs  badoo_android_tests.rs  json_utils.rs  mra.rs  telegram.rs  telegram_tests.rs  tinder_android.rs  tinder_android_tests.rs  whatsapp_android.rs  whatsapp_android_tests.rs  whatsapp_text.rs  whatsapp_text_tests.rs
src/loader/mra/: db.rs  db_tests.rs  mra_dbs.rs
src/loader/telegram/: parser_full.rs  parser_single.rs
src/merge/: analyzer.rs  analyzer_tests.rs  merger.rs  merger_tests.rs
src/server/: history_dao_service.rs  history_loader_service.rs  history_parser_service.rs  merge_service.rs  myself_chooser.rs
src/utils/: entity_utils.rs  json_utils.rs  test_utils.rs
src/utils/entity_utils/: entity_equality.rs
ui/: Cargo.toml  Tauri.toml  build.rs
ui/frontend/: .gitignore  index.html  index.js  next.config.mjs  package.json  pnpm-lock.yaml
ui/frontend/src/app/: error.tsx  page.tsx  popup.html  test-popup.tsx  utils.tsx
ui/frontend/src/app/popup/: page.tsx
ui/src/: lib.rs
