[workspace]
members = [
    "backend"
]

[workspace.package]
authors = ["frozenspider"]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
chat-history-manager-backend = { path = "backend" }

[package]
name = "chat-history-manager"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chat-history-manager-backend = { workspace = true }
