[package]
name = "chat-history-manager"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chat-history-manager-backend = { workspace = true }

# General
mimalloc = "0.1.39" # As advise by SIMD Json docs
deepsize = { workspace = true }

# Logging
log = { workspace = true }
env_logger = "0.11.3"

# CLI
clap = { version = "4.5.2", features = ["derive"] }


# ======================================================================================================================
# WORKSPACE
# ======================================================================================================================

[workspace]
members = [
    "backend"
]

[workspace.package]
authors = ["frozenspider"]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
chat-history-manager-backend = { path = "backend" }

deepsize = "0.2.0"

# Logging
log = "0.4.21"
