[package]
name = "chat-history-manager"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chat-history-manager-backend = { workspace = true }
chat-history-manager-ui = { workspace = true }

# General
mimalloc = "0.1.39" # As advise by SIMD Json docs
deepsize = { workspace = true }

# Logging
log = { workspace = true }
env_logger = { workspace = true }

# CLI
clap = { version = "4.5.2", features = ["derive"] }


# ======================================================================================================================
# WORKSPACE
# ======================================================================================================================

[workspace]
members = [
    "core",
    "backend",
    "ui"
]

[workspace.package]
authors = ["frozenspider"]
version = "0.3.0"
edition = "2021"

[workspace.dependencies]
chat-history-manager-core = { path = "core" }
chat-history-manager-backend = { path = "backend" }
chat-history-manager-ui = { path = "ui" }

itertools = "0.12.1"
lazy_static = "1.4.0"
derive_deref = "1.1.1"
anyhow = { version = "1.0.81", features = ["backtrace"] }
deepsize = "0.2.0"

# Serde
serde = "1.0.197"
serde_json = "1.0.115"

# Text processing
regex = "1.10.3"

# Protobuf
prost = "0.12.3"
prost-build = "0.12.3"
prost-types = "0.12.3"
tonic = "0.11.0"
tonic-build = "0.11.0"
tonic-reflection = "0.11.0"

# Logging
log = "0.4.21"
env_logger = "0.11.3"

[workspace.dependencies.uuid]
version = "1.7.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
