[package]
name = "chat-history-manager-backend"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chat-history-manager-core = { workspace = true }

itertools = { workspace = true }
simd-json = "0.13.8"
chrono = "0.4.35"
lazy_static = { workspace = true }
hashers = "1.0.1"
rand = { version = "0.8.5", features = ["small_rng"] }
derive_deref = { workspace = true }
anyhow = { workspace = true }
ical = "0.10.0"
const_format = "0.2.32"
reqwest = { version = "0.11.26", features = ["blocking"] }
deepsize = { workspace = true }
zip = "0.6.6"
fs_extra = "1.3.0"
uuid = { workspace = true }

# Text processing
regex = { workspace = true }
unicode-segmentation = "1.11.0"
utf16string = "0.2.0"
rtf-grimoire = "0.2.1"
encoding_rs = "0.8.33"

# Enum derivation
num-traits = "0.2.18"
num-derive = "0.4.2"

# Database
rusqlite = { version = "0.30.0", features = ["bundled", "backup"] }
diesel = { version = "2.1.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = { version = "2.1.0", features = ["sqlite"] }

# Protobuf and web service
prost = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }

# Async processing
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }

# Logging
log = { workspace = true }

[dev-dependencies]
chat-history-manager-core = { workspace = true, features = ["test-utils"] }
pretty_assertions = "1.4.0"

[build-dependencies]
prost = { workspace = true }
prost-build = { workspace = true }
prost-types = { workspace = true }
tonic-build = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }

