[package]
name = "chat-history-manager-ui"
authors.workspace = true
version.workspace = true
edition.workspace = true

[dependencies]
chat-history-manager-core = { workspace = true }

lazy_static = { workspace = true }
anyhow = { workspace = true }

# Serde
serde = { workspace = true }
serde_json = { workspace = true }

# Tauri
tauri = { version = "2.0.0-beta.13", features = [ "config-toml" ] }
tauri-plugin-dialog = "2.0.0-beta.3"
log = "0.4.21"
